--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -1,6 +1,9 @@
 :root {
   --video-container-bg: #171a22;
-  --wrong: #de1c22;
+  --wrong: #e16e76;
+  --red: #de1c22;
+  --success: #57d557;
+  --blue: #5774d5;
   --white: #ffffff;
 
   --video-track-bg: rgba(255, 255, 255, 0.89);
