--- a/src/app/features/player/player.component.html
+++ b/src/app/features/player/player.component.html
@@ -7,20 +7,45 @@
       preload="metadata"
       playsinline
       (click)="player.paused ? player.play() : player.pause()"
-      [src]="(playerService.src$ | async)"
-      [volume]="(playerService.volume$ | async) / 100"
+      [src]="playerService.src$ | async"
+      [volume]="(playerService.volume$ | async)! / 100"
     ></video>
     <app-player-controls
       (clickPlay)="player.paused ? player.play() : player.pause()"
       (openCustomization)="toggleCustomization(true)"
     ></app-player-controls>
-    <app-video-customization
-      *ngIf="isCustomizationOpen"
-      (close)="toggleCustomization(false)"
-    ></app-video-customization>
+    <app-video-customization *ngIf="isCustomizationOpen" (close)="toggleCustomization(false)"></app-video-customization>
+
   </div>
-
-
+  <p (click)="openSettings()">Открыть модалку</p>
 </div>
 
 <!--[src]="(playerService.src$ | async) + '#t=0.1'"-->
+<svg [style.display]="'none'">
+  <filter id="tritanopia" color-interpolation-filters="linearRGB">
+    <feColorMatrix
+      type="matrix"
+      in="SourceGraphic"
+      result="ProjectionOnPlane1"
+      values="
+    1.01354, 0.14268, -0.15622, 0, 0
+    -0.01181, 0.87561, 0.13619, 0, 0
+    0.07707, 0.81208, 0.11085, 0, 0
+    7.92482, -5.66475, -2.26007, 1, -0.2"
+    />
+    <feComponentTransfer in="ProjectionOnPlane1" result="ProjectionOnPlane1">
+      <feFuncA type="discrete" tableValues="0 0 0 0 1" />
+    </feComponentTransfer>
+    <feColorMatrix
+      type="matrix"
+      in="SourceGraphic"
+      result="ProjectionOnPlane2"
+      values="
+    0.93337, 0.19999, -0.13336, 0, 0
+    0.05809, 0.82565, 0.11626, 0, 0
+    -0.37923, 1.13825, 0.24098, 0, 0
+    0,0,0,1,0"
+    />
+    <feBlend in="ProjectionOnPlane1" in2="ProjectionOnPlane2" mode="normal" />
+  </filter>
+</svg>
