--- a/src/app/features/video-customization/video-customization.component.scss
+++ b/src/app/features/video-customization/video-customization.component.scss
@@ -1,7 +1,10 @@
 .video-settings-modal {
   background: var(--customization-bg);
   width: 310px;
-  height: 300px;
+  min-height: 330px;
+  height: auto;
+  //height: 330px;
+  //height:430px;
   position: absolute;
   right: 5px;
   top: 5px;
@@ -21,16 +24,66 @@
   grid-row-gap: 5px;
   align-items: center;
   margin: 0 auto;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
   .setting-range {
     margin: 0 10px;
   }
-  .setting-text {
-    color: var(--white);
+}
+.setting-text {
+  color: var(--white);
+}
+
+.colorblindness-wrapper, .epilepsy-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid transparent;
+  transition: 0.3s ease;
+  padding: 0;
+  &.active {
+    border: 1px solid var(--mune-item-hover);
+    padding: 10px 0;
+    .colorblindness:first-child, .epilepsy-protection:first-child {
+      margin-bottom: 10px;
+    }
+  }
+}
+
+.colorblindness-wrapper.active {
+  margin-bottom: 10px;
+}
+
+.colorblindness, .epilepsy-protection {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 15px;
+}
+
+.colorblindness-text {
+  color: var(--white);
+  cursor: pointer;
+  &.blue {
+    color: var(--blue);
+  }
+  &.green {
+    color: var(--success);
+  }
+  &.red {
+    color: var(--red);
+  }
+}
+
+.option-status {
+  color: var(--wrong);
+  cursor: pointer;
+  &.active {
+    color: var(--success);
   }
 }
 
 .btn {
+  margin-top: 10px;
   border: 1px solid var(--white);
   padding: 10px 20px;
   color: var(--white);
