--- a/src/app/features/player/player.component.html
+++ b/src/app/features/player/player.component.html
@@ -22,16 +22,38 @@
 
 <!--[src]="(playerService.src$ | async) + '#t=0.1'"-->
 <svg [style.display]="'none'">
+  <filter id="deuteranopia" color-interpolation-filters="linearRGB">
+    <feColorMatrix
+      type="matrix"
+      in="SourceGraphic"
+      values="
+     0.29031,  0.70969, -0.00000,  0,  0
+     0.29031,  0.70969, -0.00000,  0,  0
+    -0.02197,  0.02197,  1.00000,  0,  0
+     0,  0,  0,  1,  0"
+    />
+  </filter>
+  <filter id="protanopia" color-interpolation-filters="linearRGB">
+    <feColorMatrix
+      type="matrix"
+      in="SourceGraphic"
+      values="
+     0.10889,  0.89111, -0.00000,  0,  0
+     0.10889,  0.89111,  0.00000,  0,  0
+     0.00447, -0.00447,  1.00000,  0,  0
+     0,  0,  0,  1,  0"
+    />
+  </filter>
   <filter id="tritanopia" color-interpolation-filters="linearRGB">
     <feColorMatrix
       type="matrix"
       in="SourceGraphic"
       result="ProjectionOnPlane1"
       values="
-    1.01354, 0.14268, -0.15622, 0, 0
-    -0.01181, 0.87561, 0.13619, 0, 0
-    0.07707, 0.81208, 0.11085, 0, 0
-    7.92482, -5.66475, -2.26007, 1, -0.2"
+     1.01354,  0.14268, -0.15622,  0,  0
+    -0.01181,  0.87561,  0.13619,  0,  0
+     0.07707,  0.81208,  0.11085,  0,  0
+     7.92482, -5.66475, -2.26007,  1, -0.2"
     />
     <feComponentTransfer in="ProjectionOnPlane1" result="ProjectionOnPlane1">
       <feFuncA type="discrete" tableValues="0 0 0 0 1" />
@@ -41,11 +63,23 @@
       in="SourceGraphic"
       result="ProjectionOnPlane2"
       values="
-    0.93337, 0.19999, -0.13336, 0, 0
-    0.05809, 0.82565, 0.11626, 0, 0
-    -0.37923, 1.13825, 0.24098, 0, 0
-    0,0,0,1,0"
+     0.93337,  0.19999, -0.13336,  0,  0
+     0.05809,  0.82565,  0.11626,  0,  0
+    -0.37923,  1.13825,  0.24098,  0,  0
+     0,  0,  0,  1,  0"
     />
     <feBlend in="ProjectionOnPlane1" in2="ProjectionOnPlane2" mode="normal" />
   </filter>
+  <filter id="trueColor" color-interpolation-filters="linearRGB">
+    <feColorMatrix
+      type="matrix"
+      in="SourceGraphic"
+      values="
+     1.00000,  0.00000,  0.00000,  0,  0
+     0.00000,  1.00000,  0.00000,  0,  0
+     0.00000,  0.00000,  1.00000,  0,  0
+     0,  0,  0,  1,  0"
+    />
+  </filter>
+
 </svg>
