--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -6,6 +6,8 @@
   --blue: #5774d5;
   --white: #ffffff;
 
+  --warrning-content: rgba(222, 28, 34, 0.78);
+
   --video-track-bg: rgba(255, 255, 255, 0.89);
   --progress-line: rgba(0, 111, 255, 0.91);
   --buffered-line: rgba(201, 201, 201, 0.68);
