--- a/src/app/features/player/components/player-controls/player-controls.component.html
+++ b/src/app/features/player/components/player-controls/player-controls.component.html
@@ -3,6 +3,7 @@
   [ngClass]="{ play: playerService.changeControlsStyle$ | async }"
 >
   <div
+
     class="video-track"
     #timelineContainer
     (click)="onTimelineMove($event, timeline, timelineContainer)"
@@ -11,14 +12,16 @@
       #timeline
       class="timeline"
       [style.width.%]="
-        ((playerService.currentTrackTime$ | async)! / ((playerService.fullTrackTime$ | async)! / 100)).toFixed(2)
+        ((playerService.currentTrackTime$ | async) / ((playerService.fullTrackTime$ | async) / 100)).toFixed(2)
       "
     ></div>
     <div
-      #buffered
       class="buffered"
       [style.width.%]="playerService.progressTrackBuffer$ | async"
     ></div>
+    <ng-container
+      *unwantedContent="((playerService.fullTrackTime$ | async) / 100).toFixed(2)"
+    ></ng-container>
   </div>
   <div class="video-controls">
     <div class="video-controls_block">
