add new functions in customization service

--- a/src/app/features/player/components/player-controls/player-controls.component.html
+++ b/src/app/features/player/components/player-controls/player-controls.component.html
@@ -2,6 +2,7 @@
   class="video-controls-container"
   [ngClass]="{ play: playerService.changeControlsStyle$ | async }"
 >
+  <ng-container *skipControl></ng-container>
   <div
 
     class="video-track"
