--- a/src/app/features/player/components/player-controls/player-controls.component.scss
+++ b/src/app/features/player/components/player-controls/player-controls.component.scss
@@ -1,12 +1,11 @@
-.svg-style {
-  width: 925px;
-  height: 520px;
+:host .play {
+  ::ng-deep .skip-control-wrapper {
+    .skip-control {
+      transform: translateY(-230%);
+    }
+  }
 }
 
-
-
-
-/////////НОВОЕ С НАЧАЛА*////////////
 .video-controls-container {
   margin:0;
   position: absolute;
